--- a/Comments/Comments/Comments.csproj
+++ b/Comments/Comments/Comments.csproj
@@ -1,19 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard1.6</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <Description>Comments as a middleware for ASP.NET Core apps. Adds comments capabilities to your existing ASP.NET Core app.</Description>
-    <Version>0.2.0</Version>
-    <PackageProjectUrl>https://github.com/stanac/Comments</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/stanac/Comments</RepositoryUrl>
+    <Version>0.3.0</Version>
+    <PackageProjectUrl>https://github.com/MarkZither/Comments</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/MarkZither/Comments</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>comments aspnetcore middleware</PackageTags>
-    <Authors>stanac</Authors>
+    <Authors>stanac mburton</Authors>
     <Company></Company>
     <PackageLicenseUrl>https://github.com/stanac/Comments/blob/master/LICENSE</PackageLicenseUrl>
     <PreBuildEvent></PreBuildEvent>
-    <AssemblyVersion>0.2.0.0</AssemblyVersion>
-    <FileVersion>0.2.0.0</FileVersion>
+    <AssemblyVersion>0.3.0.0</AssemblyVersion>
+    <FileVersion>0.3.0.0</FileVersion>
   </PropertyGroup>
   
   <ItemGroup>
@@ -31,10 +31,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Markdig" Version="0.14.3" />
-    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="1.1.2" />
-    <PackageReference Include="Microsoft.Data.SQLite" Version="1.1.1" />
-    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+    <PackageReference Include="Markdig" Version="0.20.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Data.SQLite" Version="3.1.3" />
+    <PackageReference Include="Microsoft.Extensions.Primitives" Version="3.1.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
 </Project>
